--- a/publications/pubs.bib
+++ b/publications/pubs.bib
@@ -343,7 +343,7 @@ Jialin Li},
                   latter provide a private, efficient mechanism for
                   users to learn, without polling, which logs have new
                   messages.},
-                  url={papers/talek-acsac20.pdf} }
+                  link={papers/talek-acsac20.pdf} }
 
 
 
@@ -366,7 +366,7 @@ Jialin Li},
                   existing distributed in-memory storage systems into
                   persistent, crash-consistent versions with low
                   overhead and minimal code changes.},
-                  url={papers/persimmon-osdi20.pdf},
+                  link={papers/persimmon-osdi20.pdf},
                   talk = {https://www.youtube.com/watch?v=yAnkRRPbhsM}
                   }
 
@@ -394,7 +394,7 @@ Jialin Li},
                   solutions and future research, with the goal of
                   securing RDMA datacenter systems while they are
                   still in the research and prototype stages.},
-                  url={papers/rdma-sec-hotcloud20.pdf} 
+                  link={papers/rdma-sec-hotcloud20.pdf} 
                   }
 
 @InProceedings{marvin_atc,
@@ -427,7 +427,7 @@ Jialin Li},
                   reclaim memory over 60x faster than Android with a
                   Linux swap file can allocate memory under memory
                   pressure.  },
-   url={papers/marvin-atc20.pdf},
+   link={papers/marvin-atc20.pdf},
    talk = {https://www.usenix.org/conference/atc20/presentation/lebeck}}
 
 
@@ -535,9 +535,9 @@ Jialin Li},
                   optimization technology to make Ambrosia more
                   performant than many of today's non-resilient cloud
                   solutions.},
-url={papers/ambrosia-vldb19.pdf} }
+link={papers/ambrosia-vldb19.pdf} }
 
-@InProceedings{leap-asplos,
+@InProceedings{leap_asplos,
   author =        {Huaicheng Li and Mingzhe Hao and Stanko Novakovic
                   and Vaibhav Gogte and Sriram Govindan and Dan
                   R. K. Ports and Irene Zhang and Ricardo
@@ -562,7 +562,7 @@ url={papers/ambrosia-vldb19.pdf} }
                   and ARM cores and expose a virtual NVMe storage to
                   unmodified guest VMs, with a competitive speed to
                   bare-metal performance.},
-                  url={papers/leap-asplos20.pdf},
+                  link={papers/leap-asplos20.pdf},
                   talk={https://www.youtube.com/watch?v=Gyn9eABQwTQ&list=PLsLWHLZB96VeVp3IVzvSH58ttVz_Anr7H&index=26&t=0s}}
 
 
@@ -603,7 +603,7 @@ url={papers/ambrosia-vldb19.pdf} }
                   transaction protocols that require replication with
                   strong consistency, TAPIR-KV has 2x better
                   latency and throughput.},
-url={papers/tapir-tocs18.pdf},
+link={papers/tapir-tocs18.pdf},
 code={https://github.com/UWSysLab/tapir}
 }
 
@@ -615,7 +615,7 @@ code={https://github.com/UWSysLab/tapir}
   number =        {UW-CSE-2019-04-01},
   title =         {End the Senseless Killing: Improving Memory Management for Mobile Operating Systems},
   year =          2019,
-    url={papers/marvin-tr19.pdf},
+    link={papers/marvin-tr19.pdf},
   abstract =      {To ensure low-latency memory allocation, mobile
                   operating systems needing memory kill applications
                   instead of swapping memory to disk.  This design
@@ -677,7 +677,7 @@ code={https://github.com/UWSysLab/tapir}
                   using the recent Shenango operating
                   system.  }}
 
-@InProceedings{cornflakes-hotos,
+@InProceedings{cornflakes_hotos,
   author =        {Deepti Raghavan and Philip Levis and Matei Zaharia
                   and Irene Zhang},
   month =         6,
@@ -708,7 +708,7 @@ code={https://github.com/UWSysLab/tapir}
                   talk = {https://youtu.be/IF0H6dHYL8U?list=PLl-7Fg11LUZe_6cCrz6sVvTbE_8SEobNB}}
 
 
-@InProceedings{demikernel-hotos,
+@InProceedings{demikernel_hotos,
   author =        {Irene Zhang and Jing Liu and Amanda Austin and Michael Lowell Roberts and Anirudh Badam},
   month =         5,
   title =         {I'm Not Dead Yet! The Role of the Operating System in a
@@ -783,7 +783,7 @@ code={https://github.com/UWSysLab/tapir}
                   applications.}
 }
 
-@InProceedings{consistency-papoc18,
+@InProceedings{consistency_papoc18,
   author =        {Adriana Szekeres and Irene Zhang},
   month =         4,
   title =         {Making Consistency More Consistent: A Unified Model for Coherence, Consistency and Isolation},
@@ -808,7 +808,7 @@ code={https://github.com/UWSysLab/tapir}
   guarantees using a single constraint in the current literature.}}
 
 
-@InProceedings{ipa-socc16,
+@InProceedings{ipa_socc16,
   author =        {Brandon Holt and James Bornholt and Irene Zhang and Dan R. K. Ports and Mark Oskin and Luis Ceze},
   month =         10,
   title =         {Disciplined Inconsistency},
@@ -822,7 +822,7 @@ code={https://github.com/bholt/ipa}
 }
 
 
-@InProceedings{zhang-diamond,
+@InProceedings{zhang_diamond,
   author = 	 {Irene Zhang and Niel Lebeck and Pedro Fonseca and Brandon Holt and Raymond Cheng and Ariadna Norberg and Arvind Krishnamurthy and Henry M. Levy},
   title = 	 {Automating Data Management for Wide-area, Reactive Applications},
   booktitle = osdi,
@@ -846,21 +846,21 @@ code={https://github.com/bholt/ipa}
                   applications, strengthens distributed data sharing
                   guarantees, and supports automated reactivity with
                   low performance overhead.  },
-  url={papers/diamond-osdi16.pdf},
+  link ={papers/diamond-osdi16.pdf},
   code={https://github.com/UWSysLab/diamond}}
 
 
-@Article{zhang16-when,
+@Article{zhang16_when,
   author = 	 {Irene Zhang and Naveen Kr. Sharma and Adriana Szekeres and Dan R. K. Ports and Arvind Krishnamurthy},
   title = 	 {When Is Operation Ordering Required in Replicated Transactional Storage?},
   journal = 	 {IEEE Data Engineering Bulletin},
   year = 	 2016,
   month = 3,
   abstract={Today's replicated transactional storage systems typically have a layered architecture, combining protocols for transaction coordination, consistent replication, and concurrency control.  These systems generally require costly strongly-consistent replication protocols like Paxos, which assign a total order to all operations. To avoid this cost, we ask whether all replicated operations in these systems need to be strictly ordered. Recent research has yielded replication protocols that can avoid unnecessary ordering, e.g., by exploiting commutative operations, but it is not clear how to apply these to replicated transaction processing systems. We answer this question by analyzing existing transaction processing designs in terms of which replicated operations require ordering and which simply require fault tolerance.  We describe how this analysis leads to our recent work on TAPIR, a transaction protocol that efficiently provides strict serializability by using a new replication protocol that provides fault tolerance but not ordering for most operations.},
-url={papers/ordering-data.pdf}
+link ={papers/ordering-data.pdf}
 }
 
-@InProceedings{holt15-claret,
+@InProceedings{holt15_claret,
   author = 	 {Brandon Holt and Irene Zhang and Dan R. K. Ports and Mark Oskin and Luis Ceze},
   title = 	 {Claret: Using Data Types for Highly Concurrent Distributed Transactions},
   booktitle = papoc,
@@ -910,57 +910,18 @@ We explore several ways of leveraging abstract data type (ADT) semantics in data
                   transaction protocols that require replication with
                   strong consistency, TAPIR-KV has 2x better
                   latency and throughput.},
-url={papers/tapir-sosp15.pdf},
+link ={papers/tapir-sosp15.pdf},
 code={https://github.com/UWSysLab/tapir},
 talk={https://www.youtube.com/watch?v=yE3eMxYJDiE}
 }
 
-@techreport{zhang15-build_consis_trans_incon_replic_exten_version,
-  author =        {Irene Zhang and Naveen Kr. Sharma and
-                   Adriana Szekeres and Arvind Krishnamurthy and
-                   Dan R. K. Ports},
-  institution =   {University of Washington},
-  month =         10,
-  number =        {UW-CSE-2014-12-01 v2},
-  title =         {Building Consistent Transactions with Inconsistent
-                   Replication (Extended Version)},
-  year =          2015,
-    url={papers/tapir-tr-v2.pdf},
-  abstract =      {Application programmers increasingly prefer
-                   distributed storage systems with strong consistency
-                   and distributed transactions (e.g., Google's Spanner)
-                   for their strong guarantees and ease of use.
-                   Unfortunately, existing transactional storage systems
-                   are expensive to use -- in part because they require
-                   costly replication protocols, like Paxos, for fault
-                   tolerance. In this paper, we present a new approach
-                   that makes transactional storage systems more
-                   affordable: we eliminate consistency from the
-                   replication protocol while still providing
-                   distributed transactions with strong consistency to
-                   applications. <p> We present TAPIR -- the
-                   Transactional Application Protocol for Inconsistent
-                   Replication -- the first transaction protocol to use
-                   a novel replication protocol, called inconsistent
-                   replication, that provides fault tolerance without
-                   consistency. By enforcing strong consistency only in
-                   the transaction protocol, TAPIR can commit
-                   transactions in a single round-trip and order
-                   distributed transactions without centralized
-                   coordination. We demonstrate the use of TAPIR in a
-                   transactional key-value store, TAPIR-KV. Compared to
-                   conventional systems, TAPIR-KV provides better
-                   latency and throughput.},
-                   code={https://github.com/UWSysLab/tapir}
-}
-
-@InProceedings{zhang14-custom_exten_deploy_mobil_cloud_applic,
+@InProceedings{zhang14_custom_exten_deploy_mobil_cloud_applic,
   author = 	 {Irene Zhang and Adriana Szekeres and Dana Van Aken and Isaac Ackerman and Steven D. Gribble and Arvind Krishnamurthy and Henry M. Levy}, 
   title = 	 {Customizable and Extensible Deployment for Mobile/Cloud Applications},
   booktitle =  osdi,
   year = 	 2014,
   month = 10,
-  url={papers/sapphire-osdi14.pdf},
+  link ={papers/sapphire-osdi14.pdf},
   abstract={ Modern applications face new challenges in managing
                   today's highly distributed and heterogeneous
                   environment. For example, they must stitch together
@@ -984,13 +945,13 @@ talk={https://www.youtube.com/watch?v=yE3eMxYJDiE}
   talk={https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rackcdn.com/osdi14/zhang.mp4}
 }
 
-@InProceedings{peter14-arrak-osdi14,
+@InProceedings{peter14_arrak_osdi14,
   author = 	 {Simon Peter and Jialin Li and Irene Zhang and Dan R. K. Ports and Douglas Woos and Arvind Krishnamurthy and Thomas Anderson and Timothy Roscoe},
   title = 	 {Arrakis: The Operating System is the Control Plane},
   booktitle =  osdi,
   year = 	 2014,
   month = 10,
-  url={papers/arrakis-osdi14.pdf},
+  link ={papers/arrakis-osdi14.pdf},
   abstract = {Recent device hardware trends enable a new approach to
                   the design of network server operating systems. In a
                   traditional operating system, the kernel mediates
@@ -1016,24 +977,42 @@ talk= {https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rac
 }
 
 
-@Article{peter16-arrak,
+@Article{peter16_arrak,
   author = 	 {Simon Peter and Jialin Li and Irene Zhang and Dan R. K. Ports and Douglas Woos and Arvind Krishnamurthy and Thomas Anderson and Timothy Roscoe},
   title = 	 {Arrakis: The Operating System is the Control Plane},
   year = 	 2015,
   month = 11,
   journal = tocs,
-  url={papers/arrakis-tocs16.pdf},
-  abstract = {Recent device hardware trends enable a new approach to the design of network server operating systems. In a traditional operating system, the kernel mediates access to device hardware by server applications to enforce process isolation as well as network and disk security. We have designed and implemented a new operating system, Arrakis, that splits the traditional role of the kernel in two. Applications have direct access to virtualized I/O devices, allowing most I/O operations to skip the kernel entirely, while the kernel is re-engineered to provide network and disk protection without kernel mediation of every operation. We describe the hardware and software changes needed to take advantage of this new abstraction, and we illustrate its power by showing improvements of 2 to 5x in latency and 9x throughput for a popular persistent NoSQL store relative to a well-tuned Linux implementation.},
+  link ={papers/arrakis-tocs16.pdf},
+  abstract = {Recent device hardware trends enable a new approach to
+                  the design of network server operating systems. In a
+                  traditional operating system, the kernel mediates
+                  access to device hardware by server applications to
+                  enforce process isolation as well as network and
+                  disk security. We have designed and implemented a
+                  new operating system, Arrakis, that splits the
+                  traditional role of the kernel in two. Applications
+                  have direct access to virtualized I/O devices,
+                  allowing most I/O operations to skip the kernel
+                  entirely, while the kernel is re-engineered to
+                  provide network and disk protection without kernel
+                  mediation of every operation. We describe the
+                  hardware and software changes needed to take
+                  advantage of this new abstraction, and we illustrate
+                  its power by showing improvements of 2 to 5x in
+                  latency and 9x throughput for a popular persistent
+                  NoSQL store relative to a well-tuned Linux
+                  implementation.},
   code={http://arrakis.cs.washington.edu/?page_id=52}
 }
 
-@InProceedings{irene13-optim_vm_check_restor_perfor_vmwar_esxi,
+@InProceedings{irene13_optim_vm_check_restor_perfor_vmwar_esxi,
   author = 	 {Irene Zhang and Tyler Denniston and Yury Baskakov and Alex Garthwaite},
   title = 	 {Optimizing VM Checkpointing for Restore Performance in VMware ESXi},
   booktitle =  usenix_atc,
   year = 	 2013,
   month = 6,
-  url={papers/vmrestore-atc13.pdf},
+  link ={papers/vmrestore-atc13.pdf},
   abstract={   Cloud providers are increasingly looking to use virtual machine
   checkpointing for new applications beyond fault tolerance. Existing
   checkpointing systems designed for fault tolerance only optimize for
@@ -1062,13 +1041,13 @@ talk= {https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rac
  talk = {https://2459d6dc103cb5933875-c0245c5c937c5dedcca3f1764ecc9b2f.ssl.cf2.rackcdn.com/atc13/zhang.mp4}
 }
 
-@InProceedings{zhang11-fast_restor_check_memor_using,
+@InProceedings{zhang11_fast_restor_check_memor_using,
   author = 	 {Irene Zhang and Alex Garthwaite and Yury Baskakov and Kenneth C. Barr},
   title = 	 {Fast Restore of Checkpointed Memory Using Working Set Estimation},
   booktitle =  vee,
   year = 	 2011,
   month = 3,
-  url={papers/vmrestore-vee11.pdf},
+  link ={papers/vmrestore-vee11.pdf},
 abstract={ In order to make save and restore features practical, saved
                   virtual machines (VMs) must be able to quickly
                   restore to normal operation. Unfortunately, fetching
@@ -1104,7 +1083,7 @@ abstract={ In order to make save and restore features practical, saved
                   saved VM by more than 89% for some workloads.  }
 }
 
-@InProceedings{stribling09-flexib_wide_area_storag_distr_system_wheel,
+@InProceedings{stribling09_flexib_wide_area_storag_distr_system_wheel,
   author = 	 {Jeremy Stribling and Yair Sovran and Irene Zhang and
                   Xavid Pretzer and Jinyang Li and M. Frans Kaashoek
                   and Robert Morris},
@@ -1142,13 +1121,13 @@ abstract={ In order to make save and restore features practical, saved
  talk = {https://www.usenix.org/conference/nsdi-09/flexible-wide-area-storage-distributed-systems-wheelfs}
 }
 
-@InProceedings{ports10-trans_consis_autom_manag_applic_data_cache,
+@InProceedings{ports10_trans_consis_autom_manag_applic_data_cache,
   author = 	 {Dan R. K. Ports and Austin T Clements and Irene Zhang and Samuel Madden and Barbara Liskov},
   title = 	 {Transactional Consistency and Automatic Management in an Application Data Cache},
   booktitle =  osdi,
   year = 	 2010,
   month = 10,
-url={papers/txcache-osdi10.pdf},
+link ={papers/txcache-osdi10.pdf},
  abstract={Distributed in-memory application data caches like
                   memcached are a popular solution for scaling
                   database-driven web sites. These systems are easy to
@@ -1180,14 +1159,14 @@ url={papers/txcache-osdi10.pdf},
 talk ={ https://www.usenix.org/legacy/events/osdi10/stream/ports/index.html}
 }
 
-@InProceedings{peter14-towar_high_perfor_applic_level_storag_manag,
+@InProceedings{peter14_towar_high_perfor_applic_level_storag_manag,
   author = 	 {Simon Peter and Jialin Li and Doug Woos and Irene Zhang and Dan R. K. Ports and Thomas Anderson and Arvind Krishnamurthy and Mark Zbikowski},
   title = 	 {Towards High-Performance Application-Level Storage Management},
   booktitle = hot_storage,
   year = 	 2014,
   address = 	 {Philadelphia, PA, USA},
   month = 	 6,
-  url= {papers/arrakis-hotstorage14.pdf},
+  link = {papers/arrakis-hotstorage14.pdf},
   abstract={We propose a radical re-architecture of the traditional
                   operating system storage stack to move the kernel
                   off the data path. Leveraging virtualized I/O
@@ -1201,13 +1180,13 @@ talk ={ https://www.usenix.org/legacy/events/osdi10/stream/ports/index.html}
 }
 
 
-@MastersThesis{zhang09-_effic_file_distr_flexib_wide,
+@MastersThesis{zhang09_effic_file_distr_flexib_wide,
   author =       {Irene Zhang},
   title =        {Efficient File Distribution in a Flexible, Wide-Area File System},
   school =       {Massachusetts Institute of Technology},
   year =         2009,
   month= 6,
-  url={papers/meng-thesis.pdf},
+  link ={papers/meng-thesis.pdf},
   abstract={WheelFS is a wide-area distributed file system designed to
                   help applications cope with the challenges of
                   sharing data over the wide-area network. A wide
