updating broken pubs

--- a/publications/pubs.bib
+++ b/publications/pubs.bib
@@ -464,7 +464,7 @@ Jialin Li},
                   talk = {https://www.youtube.com/watch?v=hVvQTh-2jog&feature=youtu.be}}
 
 
-@TechReport{hercules-tr,
+@TechReport{hercules_tr,
   author =        { Niel Lebeck and Jonathan Goldstein and Irene Zhang},
    title =         { Hercules: A Multi-View Cache for Real-Time Interactive Apps},
   link = {papers/hercules-tr19.pdf},
@@ -492,7 +492,7 @@ Jialin Li},
   number =    {UW-CSE-2019-12-01},
   month =     12}
 
-@InProceedings{ambrosia-vldb,
+@InProceedings{ambrosia_vldb,
   author =        { Jonathan Goldstein and Ahmed Abdelhamid and Mike
                   Barnett and Sebastian Burckhardt and Badrish
                   Chandramouli and Darren Gehring and Niel Lebeck and
@@ -566,7 +566,7 @@ link={papers/ambrosia-vldb19.pdf} }
                   talk={https://www.youtube.com/watch?v=Gyn9eABQwTQ&list=PLsLWHLZB96VeVp3IVzvSH58ttVz_Anr7H&index=26&t=0s}}
 
 
-@Article{tapir-tocs,
+@Article{tapir_tocs,
   author = 	 {Irene Zhang and Naveen Kr. Sharma and Adriana
                   Szekeres and Arvind Krishnamurhty and Dan
                   R. K. Ports},
@@ -608,7 +608,7 @@ code={https://github.com/UWSysLab/tapir}
 }
 
 
-@techreport{lebeck-marvin-tr,
+@techreport{lebeck_marvin_tr,
   author =        {Niel Lebeck and Arvind Krishnamurthy and Henry M. Levy and Irene Zhang},
   institution =   {University of Washington},
   month =         4,
@@ -642,7 +642,7 @@ code={https://github.com/UWSysLab/tapir}
                   pressure.  }
 }
 
-@InProceedings{chimera-hotcloud,
+@InProceedings{chimera_hotcloud,
   author =        {Amy Ousterhout and Adam Belay and Irene Zhang},
   month =         7,
   title =         {Just In Time Delivery: Leveraging Operating Systems Knowledge for Better Datacenter Congestion Control},
@@ -873,7 +873,7 @@ Out of the many NoSQL databases in use today, some that provide simple data stru
 We explore several ways of leveraging abstract data type (ADT) semantics in databases, focusing primarily on commutativity. Using a Twitter clone as a case study, we show that using commutativity can reduce transaction abort rates for high-contention, update-heavy workloads that arise in real social networks. We conclude that ADTs are a good abstraction for database records, providing a safe and expressive programming model with ample opportunities for optimization, making databases more safe and scalable.},
 }
 
-@InProceedings{zhang14-build_consis_trans_incon_replic,
+@InProceedings{zhang14_build_consis_trans_incon_replic,
   author = 	 {Irene Zhang and Naveen Kr. Sharma and Adriana
                   Szekeres and Arvind Krishnamurhty and Dan
                   R. K. Ports},
